--- a/css/global.css
+++ b/css/global.css
@@ -1,1 +1,12 @@
+body{
+    background-color: aqua;
+    color: brown;
+    line-height: 1.6;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
